Run in Intellij